projetos/local/risingwave/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: risingwave-dashboard
  namespace: risingwave
spec:
  type: ClusterIP
  selector:
    risingwave/component: meta
    risingwave/name: risingwave
  ports:
    - name: dashboard
      port: 5691
      targetPort: 5691
      protocol: TCP
