projetos/local/risingwave/httproute-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: risingwave-dashboard-route
  namespace: risingwave
spec:
  parentRefs:
    - name: nexus-gateway
      namespace: nginx-gateway
      sectionName: tech-https
  hostnames:
    - "risingwave.tech.nexusplatform.com.br"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: risingwave-dashboard
          port: 5691
